   save time (only on some networks that support ELIST).
 - Overhauled URL opening on Unix, it now tries xdg-open first, then auto-
   detects Gnome or KDE to run gnome-open or kfmclient. URLs with quotes
   should also work now (changed to execv()).
 - Settings: Warn the user when trying to put the tree on the top/bottom.
 - DCC ack reading
 - Tray
 - Req GTK 2.10
 - 
 - 
 - Perl (Lian Wan Situ)
  * Fixed hook_command so that it won't override the help message for builtin
    commands unless a help message was specified.
  * Perl Win32: Warn the user about trying to load 64-bit ActivePerl.


------------------------------------------------------------------------------
 2.6.8 - 16/Oct/2006
------------------------------------------------------------------------------

 - Updated translations (be, de, el, es, fi, hu, it, ja, lt, pt, ru, sv, vi).
 - Removed "xchat-remote" and "dbus.so", it's now apart of the "xchat" binary.
   There is now a new dbus interface, see src/common/dbus/README for details.
   (Claessens Xavier).
 - Python: Fixed "restricted mode" errors on win32 [1512076].
 - Special-cased BRASnet for nickserv.
 - Fixed using the /MENU args -p and -e at the same time.
 - Fixed /reconnect and auto-reconnect issue [1525383].
 - Plugin API:
   * Added fields: lag, queue to the "channels" list.
   * Added fields: sizehigh to the "dcc" list.
   * Added fields: networks to the "notify" list.
   * Handle gracefully plugins that try to execute commands with invalid UTF-8.
   * Added /GETFILE command, to open a file dialog.
   * Command hooks that start with a period ('.') will now be hidden from /HELP
     and /HELP -l.
 - Fixed: [1544960] quitting via tabs behaves bad on bncs.
 - Fixed: [1551620] --version flag needs display.
 - Fixed: [1539236] problem with the /url command (irc:// handling).
 - Fixed: [1568931] treeview problem: closing tabs by holding shift and
   clicking.
 - "Clear" button in Ban List window now has a 'Are you sure?' dialog for
   safety.